# QualifiersMCP

./: .gitignore  AGENTS.md  README.md  flake.nix  pntd.0010491.s004.xlsx  pyproject.toml
.github/workflows/: docs.yml
lib/QualifiersMCP/: mcp.py
nix/: docker.nix  overlay.nix  shell.nix
