[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "QualifiersMCP"
version = "1.0.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["lib"]

[project.scripts]
serve-mcp = "QualifiersMCP.mcp:serve_mcp"

[tool.ruff]
extend-exclude = ["^.*$"]
force-exclude = true
line-length = 100000
indent-width = 2

[tool.ruff.format]
magic-trailing-comma = false

[tool.ruff.lint]
select = ["E303"]

[tool.pylint.master]
ignore-paths = ["^.*$"]
